MAINT: simplify manual problem setup

--- a/doc/tutorials/05_confined_fluids.ipynb
+++ b/doc/tutorials/05_confined_fluids.ipynb
@@ -481,20 +481,13 @@
       "  - c                        : 83513.4\n",
       "  - d                        : -2865320.0\n",
       "  - rho0                     : 762.8617\n",
+      "- gp:\n",
+      "- db:\n",
+      "- md:\n",
       "*************************************************************\n",
       "*                  PROBLEM SETUP COMPLETED                  *\n",
       "*************************************************************\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<matplotlib.legend.Legend at 0x7627bae889b0>"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
     },
     {
      "data": {
@@ -509,6 +502,7 @@
    ],
    "source": [
     "myProblem = Problem.from_string(sim)\n",
+    "myProblem.pre_run()\n",
     "\n",
     "h = myProblem.geo['hmin']\n",
     "kin_visc = myProblem.prop['shear'] / myProblem.prop['rho0']\n",
@@ -542,7 +536,7 @@
     "ax.set_xlabel('$x$')\n",
     "ax.set_ylabel(r'$j_y$')\n",
     "ax.legend(ncol=2)\n",
-    "ax.legend(ncol=1, bbox_to_anchor=(1., 1.), loc=2)"
+    "ax.legend(ncol=1, bbox_to_anchor=(1., 1.), loc=2);"
    ]
   },
   {
@@ -555,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "c9a14f9b-7307-4dc9-86c2-407b583ff419",
    "metadata": {},
    "outputs": [
@@ -614,20 +608,13 @@
       "  - c                        : 83513.4\n",
       "  - d                        : -2865320.0\n",
       "  - rho0                     : 762.8617\n",
+      "- gp:\n",
+      "- db:\n",
+      "- md:\n",
       "*************************************************************\n",
       "*                  PROBLEM SETUP COMPLETED                  *\n",
       "*************************************************************\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<matplotlib.legend.Legend at 0x7627f2a67ad0>"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
     },
     {
      "data": {
@@ -642,6 +629,7 @@
    ],
    "source": [
     "myProblem = Problem.from_string(sim)\n",
+    "myProblem.pre_run()\n",
     "\n",
     "h = myProblem.geo['hmin']\n",
     "nu = myProblem.prop['shear'] / myProblem.prop['rho0']\n",
@@ -676,7 +664,7 @@
     "\n",
     "ax.set_xlabel('$x$')\n",
     "ax.set_ylabel(r'$j_x$')\n",
-    "ax.legend(ncol=1, bbox_to_anchor=(1., 1.), loc=2)"
+    "ax.legend(ncol=1, bbox_to_anchor=(1., 1.), loc=2);"
    ]
   },
   {
