--- a/doc/tutorials/01_macro_equations.ipynb
+++ b/doc/tutorials/01_macro_equations.ipynb
@@ -9,12 +9,337 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8bed708e-8dc5-478d-9f29-212d9e6cdc0d",
+   "cell_type": "markdown",
+   "id": "9d1af296",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "For a detailed derivation and description of the following overview, see\n",
+    "[Holey, H. et al., Tribology Letters 70 (2022)](<https://doi.org/10.1007/s11249-022-01576-5>)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a8f9a04d",
+   "metadata": {},
+   "source": [
+    "## Splitting Approach"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d37c8bee",
+   "metadata": {},
+   "source": [
+    "The local mass and momentum balances are given by the partial differential equation:\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\partial \\mathbf{q}}{\\partial t} = - \\mathbf{\\nabla} \\cdot \\mathbb{F}(\\mathbf{q})\n",
+    "$$\n",
+    "\n",
+    "where\n",
+    "\n",
+    "$$\n",
+    "\\mathbf{q} =\n",
+    "\\begin{pmatrix}\n",
+    "\\rho \\\\\n",
+    "\\rho u \\\\\n",
+    "\\rho v \\\\\n",
+    "\\rho w\n",
+    "\\end{pmatrix},\n",
+    "\\quad\n",
+    "\\mathbb{F}(\\mathbf{q}) =\n",
+    "\\begin{pmatrix}\n",
+    "\\rho u & \\rho v & \\rho w \\\\\n",
+    "\\rho u^2 + p - \\tau_{\\mathrm{11}}(\\mathbf{q}) &\n",
+    "\\rho u v - \\tau_{\\mathrm{12}}(\\mathbf{q}) &\n",
+    "\\rho u w - \\tau_{\\mathrm{13}}(\\mathbf{q}) \\\\\n",
+    "\\rho v u - \\tau_{\\mathrm{21}}(\\mathbf{q}) &\n",
+    "\\rho v^2 + p - \\tau_{\\mathrm{22}}(\\mathbf{q}) &\n",
+    "\\rho v w - \\tau_{\\mathrm{23}}(\\mathbf{q}) \\\\\n",
+    "\\rho w u - \\tau_{\\mathrm{31}}(\\mathbf{q}) &\n",
+    "\\rho w v - \\tau_{\\mathrm{32}}(\\mathbf{q}) &\n",
+    "\\rho w^2 + p - \\tau_{\\mathrm{33}}(\\mathbf{q})\n",
+    "\\end{pmatrix}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4852f1e9",
+   "metadata": {},
+   "source": [
+    "The divergence operates on the rows such that the continuum equation states (similarly for the momentum equations):\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\partial \\rho}{\\partial t}\n",
+    "= - \\frac{\\partial (\\rho u)}{\\partial x}\n",
+    "- \\frac{\\partial (\\rho v)}{\\partial y}\n",
+    "- \\frac{\\partial (\\rho w)}{\\partial z}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "767db0ac",
+   "metadata": {},
+   "source": [
+    "We now assume that the problem can be divided into a time-dependent macro problem that uses the height-average of the conserved quantities $\\overline{\\mathbf{q}}(x,y,t)$ and a steady-state micro problem that resolves the values of the conserved quantities across the film thickness $\\delta \\mathbf{q}(z)$.\n",
+    "\n",
+    "$$\\mathbf{q}(x,y,z,t) = \\overline{\\mathbf{q}}(x,y,t) + \\delta \\mathbf{q}(z)$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd31c10a",
+   "metadata": {},
+   "source": [
+    "## Macro Problem"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8152d96e",
+   "metadata": {},
+   "source": [
+    "### Derivation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68c842c0",
+   "metadata": {},
+   "source": [
+    "To establish the macro problem, we eliminate the $z$-direction dependency by integrating the balances across the film thickness.\n",
+    "\n",
+    "$$\n",
+    "\\int_{h_{\\mathrm{1}}}^{h_{\\mathrm{2}}} \\left( \\frac{\\partial \\mathbf{q}}{\\partial t} = - \\mathbf{\\nabla} \\cdot \\mathbb{F}(\\mathbf{q}) \\right) \\, dz\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b5d6d5d4",
+   "metadata": {},
+   "source": [
+    "Integral of the left side:\n",
+    "\n",
+    "$$\n",
+    "\\int_{h_{\\mathrm{1}}}^{h_{\\mathrm{2}}} \\frac{\\partial \\mathbf{q}}{\\partial t} \\, dz\n",
+    "= h \\frac{\\partial \\overline{\\mathbf{q}}}{\\partial t} \n",
+    "+ \\left( \\overline{\\mathbf{q}} - \\mathbf{q} \\big|_{h_{\\mathrm{2}}} \\right) \\frac{d h_{\\mathrm{2}}}{d t} \n",
+    "- \\left( \\overline{\\mathbf{q}} - \\mathbf{q} \\big|_{h_{\\mathrm{1}}} \\right) \\frac{d h_{\\mathrm{1}}}{d t}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6498c5e0",
+   "metadata": {},
+   "source": [
+    "Integral of the right side (with $\\mathbf{f}_x$, $\\mathbf{f}_y$, $\\mathbf{f}_z$ denoting the columns of $\\mathbb{F}$ from left to right).\n",
+    "\n",
+    "$$\n",
+    "\\int_{h_{\\mathrm{1}}}^{h_{\\mathrm{2}}} \\left( \\mathbf{\\nabla} \\cdot \\mathbb{F}(\\mathbf{q}) \\right) \\, dz\n",
+    "= \\int_{h_{\\mathrm{1}}}^{h_{\\mathrm{2}}} \\frac{\\partial \\mathbf{f}_x}{\\partial x} \\, dz\n",
+    "+ \\int_{h_{\\mathrm{1}}}^{h_{\\mathrm{2}}} \\frac{\\partial \\mathbf{f}_y}{\\partial y} \\, dz\n",
+    "+ \\int_{h_{\\mathrm{1}}}^{h_{\\mathrm{2}}} \\frac{\\partial \\mathbf{f}_z}{\\partial z} \\, dz\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "842f7bdb",
+   "metadata": {},
+   "source": [
+    "For $x$ (and similarly for $y$) we obtain the following terms. Note that we obtain a height-averaged $\\overline{\\mathbf{f}_x}$ (and similarly $\\overline{\\mathbf{f}_y}$).\n",
+    "\n",
+    "$$\n",
+    "\\int_{h_{\\mathrm{1}}}^{h_{\\mathrm{2}}} \\frac{\\partial \\mathbf{f}_x}{\\partial x} \\, dz\n",
+    "= h \\frac{\\partial \\overline{\\mathbf{f}_x}}{\\partial x} \n",
+    "+ \\left( \\overline{\\mathbf{f}_x} - \\mathbf{f}_x \\big|_{h_{\\mathrm{2}}} \\right) \\frac{d h_{\\mathrm{2}}}{d t} \n",
+    "- \\left( \\overline{\\mathbf{f}_x} - \\mathbf{f}_x \\big|_{h_{\\mathrm{1}}} \\right) \\frac{d h_{\\mathrm{1}}}{d t}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "82944138",
+   "metadata": {},
+   "source": [
+    "In contrast, for the $\\mathbf{f}_z$ term, the integration direction is similar to the derivative. The term can be expressed by evaluating the function values of $\\mathbf{f}_z$ at the bottom and top:\n",
+    "\n",
+    "$$\n",
+    "\\int_{h_{\\mathrm{1}}}^{h_{\\mathrm{2}}} \\frac{\\partial \\mathbf{f}_z}{\\partial z} \\, dz\n",
+    "= \\mathbf{f}_z \\big|_{h_{\\mathrm{2}}} - \\mathbf{f}_z \\big|_{h_{\\mathrm{1}}}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51fe379c",
+   "metadata": {},
+   "source": [
+    "<a id=\"macro-equation\"></a>\n",
+    "\n",
+    "Overall we obtain the following equation with the source terms collected in $\\mathbf{s}$. Note that we have reduced the problem from three to two dimensions.\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\partial \\overline{\\mathbf{q}}}{\\partial t} \n",
+    "= - \\frac{\\partial \\overline{\\mathbf{f}_x}}{\\partial x} \n",
+    "- \\frac{\\partial \\overline{\\mathbf{f}_y}}{\\partial y} \n",
+    "- \\mathbf{s}\n",
+    "$$\n",
+    "\n",
+    "with four variables $\\overline{\\rho}(x,y,t)$, $\\overline{\\rho u}(x,y,t)$, $\\overline{\\rho v}(x,y,t)$, and $\\overline{\\rho w}(x,y,t)$ and four equations, which define the macro problem to be solved. \n",
+    "\n",
+    "Further unknowns (within $\\overline{\\mathbf{f}_x}$, $\\overline{\\mathbf{f}_y}$, $\\mathbf{s}$) are $\\tau(\\mathbf{q})$, $p(\\rho)$, and the $\\mathbf{q}$ and $\\mathbf{f}$ values at the bottom and top boundaries. As you might guess, this is the task for the micro proplem.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f5aaefd3",
+   "metadata": {},
+   "source": [
+    "### Numerical Solution"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24ece68b",
+   "metadata": {},
+   "source": [
+    "\n",
+    "For numerical solution, we use the **MacCormack scheme**. It is a two-step explicit predictor–corrector method for solving hyperbolic conservation laws and provides second-order accuracy in space and time even when including source terms as we need to do.\n",
+    "\n",
+    "For illustration, let's assume this simplified 1D problem:\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\partial \\mathbf{q}}{\\partial t} + \\frac{\\partial \\mathbf{f}(\\mathbf{q})}{\\partial x} = 0\n",
+    "$$\n",
+    "\n",
+    "where:\n",
+    "- $\\mathbf{q}$ — vector of conserved variables  \n",
+    "- $\\mathbf{f}(\\mathbf{q})$ — flux vector  \n",
+    "\n",
+    "In a first (predictor) step, we calculate an intermediate solution by forward difference\n",
+    "\n",
+    "$$\n",
+    "\\mathbf{q}_i^* = \\mathbf{q}_i^n - \\frac{\\Delta t}{\\Delta x} \n",
+    "\\left[ \\mathbf{f}(\\mathbf{q}_{i+1}^n) - \\mathbf{f}(\\mathbf{q}_i^n) \\right]\n",
+    "$$\n",
+    "\n",
+    "followed by the corrector step, where we compute the backward difference based on the intermediate solution.\n",
+    "\n",
+    "$$\n",
+    "\\mathbf{q}_i^{n+1} = \\frac{1}{2} \\left[\n",
+    "\\mathbf{q}_i^n + \\mathbf{q}_i^* - \n",
+    "\\frac{\\Delta t}{\\Delta x} \\left(\n",
+    "\\mathbf{f}(\\mathbf{q}_i^*) - \\mathbf{f}(\\mathbf{q}_{i-1}^*)\n",
+    "\\right)\n",
+    "\\right]\n",
+    "$$\n",
+    "\n",
+    "Note that it is possible to switch the order of forward- and backward-difference between each timestep, \n",
+    "obtaining a more symmetric solution scheme. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "397ecfc0",
+   "metadata": {},
+   "source": [
+    "An important concept that comes with explicit schemes is the **CFL (Courant–Friedrichs–Lewy)** number, which \n",
+    "determines the stability of the numerical method. The CFL number is defined as\n",
+    "\n",
+    "$$\n",
+    "\\text{CFL} = \\frac{\\max(|u|)\\, \\Delta t}{\\Delta x}\n",
+    "$$\n",
+    "\n",
+    "and represents the ratio of the physical wave propagation speed to the numerical propagation speed. For stability in explicit schemes, the CFL condition must be satisfied:\n",
+    "\n",
+    "$$\n",
+    "\\text{CFL} \\le 1\n",
+    "$$\n",
+    "\n",
+    "Note that depending on the problem you might want to select a lower CFL number for improved convergence."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ce631264",
+   "metadata": {},
+   "source": [
+    "## Micro Problem"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3902a7f7",
+   "metadata": {},
+   "source": [
+    "Remember the general mass and momentum balances and the splitting approach:\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\partial \\mathbf{q}}{\\partial t} = - \\mathbf{\\nabla} \\cdot \\mathbb{F}(\\mathbf{q})\n",
+    "$$\n",
+    "\n",
+    "$$\\mathbf{q}(x,y,z,t) = \\overline{\\mathbf{q}}(x,y,t) + \\delta \\mathbf{q}(z)$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c8559e53",
+   "metadata": {},
+   "source": [
+    "Now if we put the splitting approach into the general balance we get:\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\partial \\overline{\\mathbf{q}}}{\\partial t} = \n",
+    "- \\frac{\\partial \\overline{\\mathbf{f}_x}}{\\partial x} \n",
+    "- \\frac{\\partial \\overline{\\mathbf{f}_y}}{\\partial y}\n",
+    "-  \\frac{\\partial \\mathbf{f}_z}{\\partial \\delta \\mathbf{q}}\n",
+    "\\frac{\\partial \\delta \\mathbf{q}}{\\partial z}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e5ed3c1e",
+   "metadata": {},
+   "source": [
+    "Comparing this to the resulting [equation of the macro problem](#macro-equation), we see that\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\partial \\mathbf{f}_z}{\\partial \\delta \\mathbf{q}}\n",
+    "\\frac{\\partial \\delta \\mathbf{q}}{\\partial z} = \\mathbf{s}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2e0df432",
+   "metadata": {},
+   "source": [
+    "meaning that this expression is a constant source term at a given $(x,y,t)$. We can evaluate and simplify the above equation to:\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\partial}{\\partial z}\n",
+    "\\begin{pmatrix}\n",
+    "\\tau_{\\text{xz}} \\\\\n",
+    "\\tau_{\\text{yz}} \\\\\n",
+    "p + \\tau_{\\text{zz}} \\\\\n",
+    "\\end{pmatrix}\n",
+    "= \\text{const}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ce92cc9",
+   "metadata": {},
+   "source": [
+    "This information now allows us to determine the profile of the conserved quantities across the film. This is especially important for the next tutorial, where we determine the velocity profile across the film using these conditions (remember that $\\tau_{\\text{xz}} \\propto \\frac{\\partial u}{\\partial z}$ and $\\tau_{\\text{yz}} \\propto \\frac{\\partial v}{\\partial z}$)."
+   ]
   }
  ],
  "metadata": {
