DOC: Tutorial 1 improvements, mplstyle change

--- a/doc/tutorials/01_macro_equations.ipynb
+++ b/doc/tutorials/01_macro_equations.ipynb
@@ -113,7 +113,9 @@
     "\n",
     "$$\n",
     "\\int_{h_{\\mathrm{1}}}^{h_{\\mathrm{2}}} \\left( \\frac{\\partial \\mathbf{q}}{\\partial t} = - \\mathbf{\\nabla} \\cdot \\mathbb{F}(\\mathbf{q}) \\right) \\, dz\n",
-    "$$"
+    "$$\n",
+    "\n",
+    "Let's look at what we obtain by integrating the individual terms:"
    ]
   },
   {
@@ -121,14 +123,17 @@
    "id": "b5d6d5d4",
    "metadata": {},
    "source": [
-    "Integral of the left side:\n",
+    "---\n",
+    "**Integral of the time derivative** term on the left side:\n",
     "\n",
     "$$\n",
     "\\int_{h_{\\mathrm{1}}}^{h_{\\mathrm{2}}} \\frac{\\partial \\mathbf{q}}{\\partial t} \\, dz\n",
     "= h \\frac{\\partial \\overline{\\mathbf{q}}}{\\partial t} \n",
     "+ \\left( \\overline{\\mathbf{q}} - \\mathbf{q} \\big|_{h_{\\mathrm{2}}} \\right) \\frac{d h_{\\mathrm{2}}}{d t} \n",
     "- \\left( \\overline{\\mathbf{q}} - \\mathbf{q} \\big|_{h_{\\mathrm{1}}} \\right) \\frac{d h_{\\mathrm{1}}}{d t}\n",
-    "$$"
+    "$$\n",
+    "\n",
+    "Here, we obtain the time derivative of the height averaged conserved quantities $\\frac{\\partial \\overline{\\mathbf{q}}}{\\partial t}$ multiplied by $h$ as well as some source terms."
    ]
   },
   {
@@ -136,7 +141,9 @@
    "id": "6498c5e0",
    "metadata": {},
    "source": [
-    "Integral of the right side (with $\\mathbf{f}_x$, $\\mathbf{f}_y$, $\\mathbf{f}_z$ denoting the columns of $\\mathbb{F}$ from left to right).\n",
+    "---\n",
+    "\n",
+    "**Integral of the flux divergence** on the right side (with $\\mathbf{f}_x$, $\\mathbf{f}_y$, $\\mathbf{f}_z$ denoting the columns of $\\mathbb{F}$ from left to right).\n",
     "\n",
     "$$\n",
     "\\int_{h_{\\mathrm{1}}}^{h_{\\mathrm{2}}} \\left( \\mathbf{\\nabla} \\cdot \\mathbb{F}(\\mathbf{q}) \\right) \\, dz\n",
@@ -158,7 +165,9 @@
     "= h \\frac{\\partial \\overline{\\mathbf{f}_x}}{\\partial x} \n",
     "+ \\left( \\overline{\\mathbf{f}_x} - \\mathbf{f}_x \\big|_{h_{\\mathrm{2}}} \\right) \\frac{d h_{\\mathrm{2}}}{d t} \n",
     "- \\left( \\overline{\\mathbf{f}_x} - \\mathbf{f}_x \\big|_{h_{\\mathrm{1}}} \\right) \\frac{d h_{\\mathrm{1}}}{d t}\n",
-    "$$"
+    "$$\n",
+    "\n",
+    "Here, we obtain the spatial derivative of the height averaged fluxes $\\frac{\\partial \\overline{\\mathbf{f}_x}}{\\partial x}$ and $\\frac{\\partial \\overline{\\mathbf{f}_y}}{\\partial y}$ as well as - again - some source terms."
    ]
   },
   {
@@ -171,7 +180,9 @@
     "$$\n",
     "\\int_{h_{\\mathrm{1}}}^{h_{\\mathrm{2}}} \\frac{\\partial \\mathbf{f}_z}{\\partial z} \\, dz\n",
     "= \\mathbf{f}_z \\big|_{h_{\\mathrm{2}}} - \\mathbf{f}_z \\big|_{h_{\\mathrm{1}}}\n",
-    "$$"
+    "$$\n",
+    "\n",
+    "These are only source terms."
    ]
   },
   {
@@ -181,7 +192,9 @@
    "source": [
     "<a id=\"macro-equation\"></a>\n",
     "\n",
-    "Overall we obtain the following equation with the source terms collected in $\\mathbf{s}$. Note that we have reduced the problem from three to two dimensions.\n",
+    "---\n",
+    "\n",
+    "Overall we obtain the following equation with all the source terms occuring in the previous equations collected in $\\mathbf{s}$. Note that we have **reduced the problem from three to two dimensions**.\n",
     "\n",
     "$$\n",
     "\\frac{\\partial \\overline{\\mathbf{q}}}{\\partial t} \n",
@@ -200,7 +213,7 @@
    "id": "f5aaefd3",
    "metadata": {},
    "source": [
-    "### Numerical Solution"
+    "### Numerical Solution of the Macro Problem"
    ]
   },
   {
@@ -338,7 +351,7 @@
    "id": "1ce92cc9",
    "metadata": {},
    "source": [
-    "This information now allows us to determine the profile of the conserved quantities across the film. This is especially important for the next tutorial, where we determine the velocity profile across the film using these conditions (remember that $\\tau_{\\text{xz}} \\propto \\frac{\\partial u}{\\partial z}$ and $\\tau_{\\text{yz}} \\propto \\frac{\\partial v}{\\partial z}$)."
+    "This information now allows us to determine the profile of the conserved quantities across the film and is the basis for the **solution of the micro problem**. In the following tutorial, we will determine the velocity profile across the film using these conditions (remember that $\\tau_{\\text{xz}} \\propto \\frac{\\partial u}{\\partial z}$ and $\\tau_{\\text{yz}} \\propto \\frac{\\partial v}{\\partial z}$)."
    ]
   }
  ],
