--- a/doc/tutorials/01_macro_equations.ipynb
+++ b/doc/tutorials/01_macro_equations.ipynb
@@ -59,8 +59,12 @@
     "\\rho w u - \\tau_{\\mathrm{31}}(\\mathbf{q}) &\n",
     "\\rho w v - \\tau_{\\mathrm{32}}(\\mathbf{q}) &\n",
     "\\rho w^2 + p - \\tau_{\\mathrm{33}}(\\mathbf{q})\n",
-    "\\end{pmatrix}\n",
-    "$$"
+    "\\end{pmatrix},\n",
+    "$$\n",
+    "\n",
+    "where $\\rho$ denotes mass density, $u$, $v$, $w$ are the Cartesian components of the velocity field $\\vec{u}$, $\\tau_{ij}$ are components of the viscous stress tensor $\\underline{\\tau}$, and $p$ denotes the fluid pressure.\n",
+    "\n",
+    "In the following we treat the mass fluxes $j_x\\equiv\\rho u$, $j_y\\equiv\\rho v$, and $j_z\\equiv\\rho w$ as independent variables, i.e. we work with *conservative* instead of *primitive* variables."
    ]
   },
   {
@@ -72,9 +76,9 @@
     "\n",
     "$$\n",
     "\\frac{\\partial \\rho}{\\partial t}\n",
-    "= - \\frac{\\partial (\\rho u)}{\\partial x}\n",
-    "- \\frac{\\partial (\\rho v)}{\\partial y}\n",
-    "- \\frac{\\partial (\\rho w)}{\\partial z}\n",
+    "= - \\frac{\\partial j_x}{\\partial x}\n",
+    "- \\frac{\\partial j_y}{\\partial y}\n",
+    "- \\frac{\\partial j_z}{\\partial z}\n",
     "$$"
    ]
   },
@@ -109,13 +113,13 @@
    "id": "68c842c0",
    "metadata": {},
    "source": [
-    "To establish the macro problem, we eliminate the $z$-direction dependency by integrating the balances across the film thickness.\n",
+    "To establish the macro problem, we eliminate the $z$-direction dependency by integrating the balances across the film thickness\n",
     "\n",
     "$$\n",
-    "\\int_{h_{\\mathrm{1}}}^{h_{\\mathrm{2}}} \\left( \\frac{\\partial \\mathbf{q}}{\\partial t} = - \\mathbf{\\nabla} \\cdot \\mathbb{F}(\\mathbf{q}) \\right) \\, dz\n",
+    "\\int_{h_{\\mathrm{1}}}^{h_{\\mathrm{2}}} \\left( \\frac{\\partial \\mathbf{q}}{\\partial t} - \\mathbf{\\nabla} \\cdot \\mathbb{F}(\\mathbf{q}) \\right) \\, dz = 0.\n",
     "$$\n",
     "\n",
-    "Let's look at what we obtain by integrating the individual terms:"
+    "Here, $h_1\\equiv h_1(x,y,t)$ and $h_2\\equiv h_2(x,y,t)$ describe the topographies of the lower and upper wall, respectively. Their difference is denoted with $h \\equiv h(x,y,t) = h_2(x,y,t) - h_1(x,y,t)$. We need to account for the spatial and temporal dependencies of the topography when evaluating the above integral. Let's look at what we obtain by integrating the individual terms:"
    ]
   },
   {
@@ -158,13 +162,13 @@
    "id": "842f7bdb",
    "metadata": {},
    "source": [
-    "For $x$ (and similarly for $y$) we obtain the following terms. Note that we obtain a height-averaged $\\overline{\\mathbf{f}_x}$ (and similarly $\\overline{\\mathbf{f}_y}$).\n",
+    "For $x$ (and similarly for $y$) we obtain the following terms. Note that we obtain a height-averaged $\\overline{\\mathbf{f}}_x$ (and similarly $\\overline{\\mathbf{f}}_y$).\n",
     "\n",
     "$$\n",
     "\\int_{h_{\\mathrm{1}}}^{h_{\\mathrm{2}}} \\frac{\\partial \\mathbf{f}_x}{\\partial x} \\, dz\n",
-    "= h \\frac{\\partial \\overline{\\mathbf{f}_x}}{\\partial x} \n",
-    "+ \\left( \\overline{\\mathbf{f}_x} - \\mathbf{f}_x \\big|_{h_{\\mathrm{2}}} \\right) \\frac{d h_{\\mathrm{2}}}{d t} \n",
-    "- \\left( \\overline{\\mathbf{f}_x} - \\mathbf{f}_x \\big|_{h_{\\mathrm{1}}} \\right) \\frac{d h_{\\mathrm{1}}}{d t}\n",
+    "= h \\frac{\\partial \\overline{\\mathbf{f}}_x}{\\partial x} \n",
+    "+ \\left( \\overline{\\mathbf{f}}_x - \\mathbf{f}_x \\big|_{h_{\\mathrm{2}}} \\right) \\frac{d h_{\\mathrm{2}}}{d t} \n",
+    "- \\left( \\overline{\\mathbf{f}}_x - \\mathbf{f}_x \\big|_{h_{\\mathrm{1}}} \\right) \\frac{d h_{\\mathrm{1}}}{d t}\n",
     "$$\n",
     "\n",
     "Here, we obtain the spatial derivative of the height averaged fluxes $\\frac{\\partial \\overline{\\mathbf{f}_x}}{\\partial x}$ and $\\frac{\\partial \\overline{\\mathbf{f}_y}}{\\partial y}$ as well as - again - some source terms."
@@ -175,7 +179,7 @@
    "id": "82944138",
    "metadata": {},
    "source": [
-    "In contrast, for the $\\mathbf{f}_z$ term, the integration direction is similar to the derivative. The term can be expressed by evaluating the function values of $\\mathbf{f}_z$ at the bottom and top:\n",
+    "In contrast, for the $\\mathbf{f}_z$ term, the integration direction is the same as that of the derivative. The term can be expressed by evaluating the function values of $\\mathbf{f}_z$ at the bottom and top:\n",
     "\n",
     "$$\n",
     "\\int_{h_{\\mathrm{1}}}^{h_{\\mathrm{2}}} \\frac{\\partial \\mathbf{f}_z}{\\partial z} \\, dz\n",
@@ -198,14 +202,14 @@
     "\n",
     "$$\n",
     "\\frac{\\partial \\overline{\\mathbf{q}}}{\\partial t} \n",
-    "= - \\frac{\\partial \\overline{\\mathbf{f}_x}}{\\partial x} \n",
-    "- \\frac{\\partial \\overline{\\mathbf{f}_y}}{\\partial y} \n",
+    "= - \\frac{\\partial \\overline{\\mathbf{f}}_x}{\\partial x} \n",
+    "- \\frac{\\partial \\overline{\\mathbf{f}}_y}{\\partial y} \n",
     "- \\mathbf{s}\n",
     "$$\n",
     "\n",
-    "with four variables $\\overline{\\rho}(x,y,t)$, $\\overline{\\rho u}(x,y,t)$, $\\overline{\\rho v}(x,y,t)$, and $\\overline{\\rho w}(x,y,t)$ and four equations, which define the macro problem to be solved. \n",
+    "with four variables $\\overline{\\rho}(x,y,t)$, $\\overline{j}_x(x,y,t)$, $\\overline{j}_y(x,y,t)$, and $\\overline{j}_z(x,y,t)$ and four equations, which define the macro problem to be solved.\n",
     "\n",
-    "Further unknowns (within $\\overline{\\mathbf{f}_x}$, $\\overline{\\mathbf{f}_y}$, $\\mathbf{s}$) are $\\tau(\\mathbf{q})$, $p(\\rho)$, and the $\\mathbf{q}$ and $\\mathbf{f}$ values at the bottom and top boundaries. As you might guess, this is the task for the micro proplem.\n"
+    "Further unknowns (within $\\overline{\\mathbf{f}}_x$, $\\overline{\\mathbf{f}}_y$, $\\mathbf{s}$) are $\\tau(\\mathbf{q})$, $p(\\rho)$, and the $\\mathbf{q}$ and $\\mathbf{f}$ values at the bottom and top boundaries. As you might guess, this is the task for the micro problem.\n"
    ]
   },
   {
@@ -308,8 +312,8 @@
     "\n",
     "$$\n",
     "\\frac{\\partial \\overline{\\mathbf{q}}}{\\partial t} = \n",
-    "- \\frac{\\partial \\overline{\\mathbf{f}_x}}{\\partial x} \n",
-    "- \\frac{\\partial \\overline{\\mathbf{f}_y}}{\\partial y}\n",
+    "- \\frac{\\partial \\overline{\\mathbf{f}}_x}{\\partial x} \n",
+    "- \\frac{\\partial \\overline{\\mathbf{f}}_y}{\\partial y}\n",
     "-  \\frac{\\partial \\mathbf{f}_z}{\\partial \\delta \\mathbf{q}}\n",
     "\\frac{\\partial \\delta \\mathbf{q}}{\\partial z}\n",
     "$$"
