BUG: mathrm instead of rm and reference fix

--- a/doc/tutorials/01_macro_equations.ipynb
+++ b/doc/tutorials/01_macro_equations.ipynb
@@ -194,7 +194,7 @@
    "id": "13",
    "metadata": {},
    "source": [
-    "<a id=\"macro-equation\"></a>\n",
+    "<a id=\"eq-macro-equation\"></a>\n",
     "\n",
     "---\n",
     "\n",
@@ -324,7 +324,7 @@
    "id": "20",
    "metadata": {},
    "source": [
-    "Comparing this to the resulting [equation of the macro problem](#macro-equation), we see that\n",
+    "Comparing this to the resulting [equation of the macro problem](#eq-macro-equation), we see that\n",
     "\n",
     "$$\n",
     "\\frac{\\partial \\mathbf{f}_z}{\\partial \\delta \\mathbf{q}}\n",
