--- a/doc/tutorials/02_stress_sympy.ipynb
+++ b/doc/tutorials/02_stress_sympy.ipynb
@@ -22,9 +22,9 @@
     "\n",
     "We start with a common ansatz for the velocity profiles\n",
     "\n",
-    "$u(z) = a z (h - z) + \\frac{U_\\rm{top} - U_\\rm{bot}}{h} z + U_\\rm{bot}$,\n",
+    "$u(z) = a z (h - z) + \\frac{U_\\mathrm{top} - U_\\mathrm{bot}}{h} z + U_\\mathrm{bot}$,\n",
     "\n",
-    "$v(z) = b z (h - z) + \\frac{V_\\rm{top} - V_\\rm{bot}}{h} z + V_\\rm{bot}$,\n",
+    "$v(z) = b z (h - z) + \\frac{V_\\mathrm{top} - V_\\mathrm{bot}}{h} z + V_\\mathrm{bot}$,\n",
     "\n",
     "$w(z) = cz^2(h - z)^2$,\n",
     "\n",
@@ -63,18 +63,18 @@
    "id": "3",
    "metadata": {},
    "source": [
-    "$U_\\rm{bot}$, $U_\\rm{top}$, $V_\\rm{bot}$, $V_\\rm{top}$ are the velocity of the outermost fluid\n",
+    "$U_\\mathrm{bot}$, $U_\\mathrm{top}$, $V_\\mathrm{bot}$, $V_\\mathrm{top}$ are the velocity of the outermost fluid\n",
     "layers in contact with the the bottom and top wall, and in $x$ and $y$ direction, respectively.\n",
     "In the case of the no slip boundary condition, these velocities are identical\n",
-    "with those of the wall. For the no slip boundary conditions, we have to account for the slip length $L_\\rm{slip}$\n",
+    "with those of the wall. For the no slip boundary conditions, we have to account for the slip length $L_\\mathrm{slip}$\n",
     "\n",
-    "$U_\\rm{bot} = U_\\rm{bot,wall} + L_\\rm{slip, bot}\\left(\\frac{\\partial u}{\\partial z}\\right)_{z=0}$,\n",
+    "$U_\\mathrm{bot} = U_\\mathrm{bot,wall} + L_\\mathrm{slip, bot}\\left(\\frac{\\partial u}{\\partial z}\\right)_{z=0}$,\n",
     "\n",
-    "$U_\\rm{top} = U_\\rm{top,wall} - L_\\rm{slip, top}\\left(\\frac{\\partial u}{\\partial z}\\right)_{z=h}$,\n",
+    "$U_\\mathrm{top} = U_\\mathrm{top,wall} - L_\\mathrm{slip, top}\\left(\\frac{\\partial u}{\\partial z}\\right)_{z=h}$,\n",
     "\n",
-    "$V_\\rm{bot} = V_\\rm{bot,wall} + L_\\rm{slip, top}\\left(\\frac{\\partial v}{\\partial z}\\right)_{z=0}$,\n",
+    "$V_\\mathrm{bot} = V_\\mathrm{bot,wall} + L_\\mathrm{slip, top}\\left(\\frac{\\partial v}{\\partial z}\\right)_{z=0}$,\n",
     "\n",
-    "$V_\\rm{top} = V_\\rm{top,wall} - L_\\rm{slip, top}\\left(\\frac{\\partial v}{\\partial z}\\right)_{z=h}$."
+    "$V_\\mathrm{top} = V_\\mathrm{top,wall} - L_\\mathrm{slip, top}\\left(\\frac{\\partial v}{\\partial z}\\right)_{z=h}$."
    ]
   },
   {
@@ -193,7 +193,7 @@
    "id": "10",
    "metadata": {},
    "source": [
-    "It is important to realize that the solutions depend on the lateral coordinates.\n",
+    "It is important to realize that the solutions of $\\tau_{xx}, \\tau_{xy}, \\tau_{yx}, \\tau_{yy}$ depend on the lateral coordinates (they depend on how velocities $u, v$ change in $x, y$ directions).\n",
     "Thus, before we differentiate, we need to substitute the solutions\n",
     "into the expressions for the velocity profiles using ```subs```."
    ]
@@ -541,7 +541,7 @@
    "notebook_metadata_filter": "-all"
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "GaPFlow",
    "language": "python",
    "name": "python3"
   },
