--- a/doc/tutorials/08_elastic_deformation.ipynb
+++ b/doc/tutorials/08_elastic_deformation.ipynb
@@ -91,6 +91,7 @@
    "id": "8",
    "metadata": {},
    "source": [
+    "---\n",
     "#### Periodic Solution"
    ]
   },
@@ -113,6 +114,7 @@
    "id": "10",
    "metadata": {},
    "source": [
+    "---\n",
     "#### Non-Periodic Solution"
    ]
   },
@@ -152,6 +154,7 @@
    "id": "12",
    "metadata": {},
    "source": [
+    "---\n",
     "#### Semi-Periodic Solution"
    ]
   },
@@ -177,6 +180,7 @@
    "id": "14",
    "metadata": {},
    "source": [
+    "---\n",
     "#### Fourier Transform Trick"
    ]
   },
@@ -561,7 +565,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "GaPFlow",
    "language": "python",
    "name": "python3"
   },
