JOSS: paper structure

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -43,7 +43,7 @@
   urldate = {2024-01-29},
 }
 
-@article{holey2025_activea,
+@article{holey2025_active,
   title = {Active Learning for Nonparametric Multiscale Modeling of Boundary Lubrication},
   author = {Holey, Hannes and Gumbsch, Peter and Pastewka, Lars},
   year = 2025,
