--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -1,3 +1,16 @@
+@article{archard1962_lubrication,
+  title = {Lubrication at Point Contacts},
+  author = {Archard, J. F. and Kirk, M. T. and Allibone, Thomas Edward},
+  year = 1962,
+  journal = {Proceedings of the Royal Society of London. Series A. Mathematical and Physical Sciences},
+  volume = {261},
+  number = {1307},
+  pages = {532--550},
+  publisher = {Royal Society},
+  doi = {10.1098/rspa.1961.0094},
+  urldate = {2024-07-12}
+}
+
 @article{codrignani2023_continuum,
   title = {Toward a Continuum Description of Lubrication in Highly Pressurized Nanometer-Wide Constrictions: {{The}} Importance of Accurate Slip Laws},
   shorttitle = {Toward a Continuum Description of Lubrication in Highly Pressurized Nanometer-Wide Constrictions},
@@ -10,7 +23,52 @@
   pages = {eadi2649},
   publisher = {American Association for the Advancement of Science},
   doi = {10.1126/sciadv.adi2649},
-  urldate = {2023-12-02},
+  urldate = {2023-12-02}
+}
+
+@article{ewen2018_advances,
+  title = {Advances in Nonequilibrium Molecular Dynamics Simulations of Lubricants and Additives},
+  author = {Ewen, J. P. and Heyes, D. M. and Dini, D.},
+  year = 2018,
+  month = dec,
+  journal = {Friction},
+  volume = {6},
+  number = {4},
+  pages = {349--386},
+  issn = {2223-7704},
+  doi = {10.1007/s40544-018-0207-9},
+  urldate = {2020-06-02},
+  langid = {english}
+}
+
+@article{gao1997_layering,
+  title = {Layering Transitions and Dynamics of Confined Liquid Films},
+  author = {Gao, Jianping and Luedtke, W. D. and Landman, Uzi},
+  year = 1997,
+  month = jul,
+  journal = {Physical Review Letters},
+  volume = {79},
+  number = {4},
+  pages = {705--708},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.79.705},
+  urldate = {2022-09-02}
+}
+
+@article{glovnea2003_measurement,
+  title = {Measurement of Sub-Nanometer Lubricant Films Using Ultra-Thin Film Interferometry},
+  author = {Glovnea, R.P. and Forrest, A.K. and Olver, A.V. and Spikes, H.A.},
+  year = 2003,
+  month = oct,
+  journal = {Tribology Letters},
+  volume = {15},
+  number = {3},
+  pages = {217--230},
+  issn = {1573-2711},
+  doi = {10.1023/A:1024809102533},
+  urldate = {2024-07-12},
+  langid = {english},
+  keywords = {boundary lubrication,film thickness,lubrication,multiple beam interferometry,optical interferometry,thin film}
 }
 
 @article{holey2022_heightaveraged,
@@ -26,7 +84,7 @@
   doi = {10.1007/s11249-022-01576-5},
   urldate = {2022-03-06},
   langid = {english},
-  keywords = {own},
+  keywords = {own}
 }
 
 @article{holey2024_sound,
@@ -40,7 +98,7 @@
   pages = {014203},
   publisher = {American Physical Society},
   doi = {10.1103/PhysRevFluids.9.014203},
-  urldate = {2024-01-29},
+  urldate = {2024-01-29}
 }
 
 @article{holey2025_active,
@@ -54,5 +112,153 @@
   pages = {eadx4546},
   publisher = {American Association for the Advancement of Science},
   doi = {10.1126/sciadv.adx4546},
-  urldate = {2025-09-12},
+  urldate = {2025-09-12}
+}
+
+@article{hormann2024_dtool,
+  title = {Dtool and Dserver: {{A}} Flexible Ecosystem for Findable Data},
+  shorttitle = {Dtool and Dserver},
+  author = {H{\"o}rmann, Johannes L. and Yanes, Luis and Vazhappilly, Ashwin and Sanner, Antoine and Holey, Hannes and Pastewka, Lars and Hartley, Matthew and Olsson, Tjelvar S. G.},
+  year = 2024,
+  month = jun,
+  journal = {PLOS ONE},
+  volume = {19},
+  number = {6},
+  pages = {e0306100},
+  publisher = {Public Library of Science},
+  issn = {1932-6203},
+  doi = {10.1371/journal.pone.0306100},
+  urldate = {2024-06-25},
+  langid = {english},
+  keywords = {Data management,Database searching,Databases,Ecosystems,Ingestion,Language,Life cycles,Metadata}
+}
+
+@article{maccormack2003_effect,
+  title = {The Effect of Viscosity in Hypervelocity Impact Cratering},
+  author = {MacCormack, Robert W.},
+  year = 2003,
+  month = sep,
+  journal = {Journal of Spacecraft and Rockets},
+  volume = {40},
+  number = {5},
+  pages = {757--763},
+  issn = {0022-4650, 1533-6794},
+  doi = {10.2514/2.6901},
+  urldate = {2020-03-17},
+  langid = {english},
+  annotation = {Original: AIAA paper 69-354, 1969}
+}
+
+@article{martini2006_molecular,
+  title = {Molecular Dynamics Characterization of Thin Film Viscosity for {{EHL}} Simulation},
+  author = {Martini, A. and Liu, Y. and Snurr, R.Q. and Wang, Q. J.},
+  year = 2006,
+  month = mar,
+  journal = {Tribology Letters},
+  volume = {21},
+  number = {3},
+  pages = {217--225},
+  issn = {1573-2711},
+  doi = {10.1007/s11249-006-9023-x},
+  urldate = {2022-06-29},
+  langid = {english},
+  keywords = {EHL with non-Newtonian lubricants,nanotribology,viscosity}
+}
+
+@article{pit2000_direct,
+  title = {Direct Experimental Evidence of Slip in Hexadecane: {{Solid}} Interfaces},
+  shorttitle = {Direct {{Experimental Evidence}} of {{Slip}} in {{Hexadecane}}},
+  author = {Pit, R. and Hervet, H. and L{\'e}ger, L.},
+  year = 2000,
+  month = jul,
+  journal = {Physical Review Letters},
+  volume = {85},
+  number = {5},
+  pages = {980--983},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.85.980},
+  urldate = {2022-11-03}
+}
+
+@book{rasmussen2006_gaussian,
+  title = {Gaussian {{Processes}} for {{Machine Learning}}},
+  author = {Rasmussen, Carl Edward and Williams, Christopher K. I.},
+  year = 2006,
+  series = {Adaptive Computation and Machine Learning},
+  publisher = {MIT Press},
+  address = {Cambridge, MA},
+  isbn = {978-0-262-18253-9},
+  langid = {english},
+  lccn = {QA274.4 .R37 2006},
+  keywords = {Data processing,Gaussian processes,Machine learning,Mathematical models}
+}
+
+@article{reynolds1886_iv,
+  title = {{{IV}}. {{On}} the Theory of Lubrication and Its Application to {{Mr}}. {{Beauchamp Tower}}'s Experiments, Including an Experimental Determination of the Viscosity of Olive Oil},
+  author = {Reynolds, Osborne},
+  year = 1886,
+  month = jan,
+  journal = {Philosophical Transactions of the Royal Society of London},
+  volume = {177},
+  pages = {157--234},
+  doi = {10.1098/rstl.1886.0005},
+  urldate = {2019-11-16}
+}
+
+@article{savio2015_multiscale,
+  title = {A Multiscale Study on the Wall Slip Effect in a Ceramic--Steel Contact with Nanometer-Thick Lubricant Film by a Nano-to-Elastohydrodynamic Lubrication Approach},
+  author = {Savio, D. and Fillot, N. and Vergne, P. and Hetzler, H. and Seemann, W. and Morales Espejel, G. E.},
+  year = 2015,
+  month = jul,
+  journal = {Journal of Tribology},
+  volume = {137},
+  number = {3},
+  pages = {031502},
+  issn = {0742-4787},
+  doi = {10.1115/1.4029937},
+  urldate = {2022-10-20}
+}
+
+@article{strong2017_dynamics,
+  title = {The Dynamics of Water in Porous Two-Dimensional Crystals},
+  author = {Strong, Steven E. and Eaves, Joel D.},
+  year = 2017,
+  month = jan,
+  journal = {The Journal of Physical Chemistry B},
+  volume = {121},
+  number = {1},
+  pages = {189--207},
+  publisher = {American Chemical Society},
+  issn = {1520-6106},
+  doi = {10.1021/acs.jpcb.6b09387},
+  urldate = {2021-11-17}
+}
+
+@article{thompson2022_lammps,
+  title = {{{LAMMPS}} - a Flexible Simulation Tool for Particle-Based Materials Modeling at the Atomic, Meso, and Continuum Scales},
+  author = {Thompson, Aidan P. and Aktulga, H. Metin and Berger, Richard and Bolintineanu, Dan S. and Brown, W. Michael and Crozier, Paul S. and {in 't Veld}, Pieter J. and Kohlmeyer, Axel and Moore, Stan G. and Nguyen, Trung Dac and Shan, Ray and Stevens, Mark J. and Tranchida, Julien and Trott, Christian and Plimpton, Steven J.},
+  year = 2022,
+  month = feb,
+  journal = {Computer Physics Communications},
+  volume = {271},
+  pages = {108171},
+  issn = {0010-4655},
+  doi = {10.1016/j.cpc.2021.108171},
+  urldate = {2022-05-10},
+  langid = {english},
+  keywords = {LAMMPS,Materials modeling,Molecular dynamics,Parallel algorithms}
+}
+
+@article{zhu2001_ratedependent,
+  title = {Rate-Dependent Slip of {{Newtonian}} Liquid at Smooth Surfaces},
+  author = {Zhu, Yingxi and Granick, Steve},
+  year = 2001,
+  month = aug,
+  journal = {Physical Review Letters},
+  volume = {87},
+  number = {9},
+  pages = {096105},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.87.096105},
+  urldate = {2022-08-25}
 }
