JOSS: more features sections

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -133,6 +133,39 @@
   keywords = {Data management,Database searching,Databases,Ecosystems,Ingestion,Language,Life cycles,Metadata}
 }
 
+@article{jewett2021_moltemplate,
+  title = {Moltemplate: {{A Tool}} for {{Coarse-Grained Modeling}} of {{Complex Biological Matter}} and {{Soft Condensed Matter Physics}}},
+  shorttitle = {Moltemplate},
+  author = {Jewett, Andrew I. and Stelter, David and Lambert, Jason and Saladi, Shyam M. and Roscioni, Otello M. and Ricci, Matteo and Autin, Ludovic and Maritan, Martina and Bashusqeh, Saeed M. and Keyes, Tom and Dame, Remus T. and Shea, Joan-Emma and Jensen, Grant J. and Goodsell, David S.},
+  year = 2021,
+  month = may,
+  journal = {Journal of Molecular Biology},
+  series = {Computation {{Resources}} for {{Molecular Biology}}},
+  volume = {433},
+  number = {11},
+  pages = {166841},
+  issn = {0022-2836},
+  doi = {10.1016/j.jmb.2021.166841},
+  urldate = {2025-03-19},
+  keywords = {coarse-grained simulation,LAMMPS,molecular dynamics,molecular modeling}
+}
+
+@article{larsen2017_atomic,
+  title = {The Atomic Simulation Environment---a {{Python}} Library for Working with Atoms},
+  author = {Larsen, Ask Hjorth and Mortensen, Jens J{\o}rgen and Blomqvist, Jakob and Castelli, Ivano E. and Christensen, Rune and Du{\l}ak, Marcin and Friis, Jesper and Groves, Michael N. and Hammer, Bj{\o}rk and Hargus, Cory and Hermes, Eric D. and Jennings, Paul C. and Jensen, Peter Bjerre and Kermode, James and Kitchin, John R. and Kolsbjerg, Esben Leonhard and Kubal, Joseph and Kaasbjerg, Kristen and Lysgaard, Steen and Maronsson, J{\'o}n Bergmann and Maxson, Tristan and Olsen, Thomas and Pastewka, Lars and Peterson, Andrew and Rostgaard, Carsten and Schi{\o}tz, Jakob and Sch{\"u}tt, Ole and Strange, Mikkel and Thygesen, Kristian S. and Vegge, Tejs and Vilhelmsen, Lasse and Walter, Michael and Zeng, Zhenhua and Jacobsen, Karsten W.},
+  year = 2017,
+  month = jun,
+  journal = {Journal of Physics: Condensed Matter},
+  volume = {29},
+  number = {27},
+  pages = {273002},
+  publisher = {IOP Publishing},
+  issn = {0953-8984},
+  doi = {10.1088/1361-648X/aa680e},
+  urldate = {2024-06-11},
+  langid = {english}
+}
+
 @article{maccormack2003_effect,
   title = {The Effect of Viscosity in Hypervelocity Impact Cratering},
   author = {MacCormack, Robert W.},
