JOSS: dtool section

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -198,6 +198,21 @@
   keywords = {EHL with non-Newtonian lubricants,nanotribology,viscosity}
 }
 
+@article{olsson2019_lightweight,
+  title = {Lightweight Data Management with Dtool},
+  author = {Olsson, Tjelvar S. G. and Hartley, Matthew},
+  year = 2019,
+  month = mar,
+  journal = {PeerJ},
+  volume = {7},
+  pages = {e6562},
+  publisher = {PeerJ Inc.},
+  issn = {2167-8359},
+  doi = {10.7717/peerj.6562},
+  urldate = {2022-09-14},
+  langid = {english}
+}
+
 @article{pit2000_direct,
   title = {Direct Experimental Evidence of Slip in Hexadecane: {{Solid}} Interfaces},
   shorttitle = {Direct {{Experimental Evidence}} of {{Slip}} in {{Hexadecane}}},
@@ -236,6 +251,22 @@
   pages = {157--234},
   doi = {10.1098/rstl.1886.0005},
   urldate = {2019-11-16}
+}
+
+@article{rottger2022_contactengineeringcreate,
+  title = {Contact.Engineering---{{Create}}, Analyze and Publish Digital Surface Twins from Topography Measurements across Many Scales},
+  author = {R{\"o}ttger, Michael C. and Sanner, Antoine and Thimons, Luke A. and Junge, Till and Gujrati, Abhijeet and Monti, Joseph M. and N{\"o}hring, Wolfram G. and Jacobs, Tevis D. B. and Pastewka, Lars},
+  year = 2022,
+  month = sep,
+  journal = {Surface Topography: Metrology and Properties},
+  volume = {10},
+  number = {3},
+  pages = {035032},
+  publisher = {IOP Publishing},
+  issn = {2051-672X},
+  doi = {10.1088/2051-672X/ac860a},
+  urldate = {2023-12-04},
+  langid = {english}
 }
 
 @article{savio2015_multiscale,
@@ -280,6 +311,24 @@
   urldate = {2022-05-10},
   langid = {english},
   keywords = {LAMMPS,Materials modeling,Molecular dynamics,Parallel algorithms}
+}
+
+@article{wilkinson2016_fair,
+  title = {The {{FAIR Guiding Principles}} for Scientific Data Management and Stewardship},
+  author = {Wilkinson, Mark D. and Dumontier, Michel and Aalbersberg, IJsbrand Jan and Appleton, Gabrielle and Axton, Myles and Baak, Arie and Blomberg, Niklas and Boiten, Jan-Willem and {da Silva Santos}, Luiz Bonino and Bourne, Philip E. and Bouwman, Jildau and Brookes, Anthony J. and Clark, Tim and Crosas, Merc{\`e} and Dillo, Ingrid and Dumon, Olivier and Edmunds, Scott and Evelo, Chris T. and Finkers, Richard and {Gonzalez-Beltran}, Alejandra and Gray, Alasdair J. G. and Groth, Paul and Goble, Carole and Grethe, Jeffrey S. and Heringa, Jaap and {'t Hoen}, Peter A. C. and Hooft, Rob and Kuhn, Tobias and Kok, Ruben and Kok, Joost and Lusher, Scott J. and Martone, Maryann E. and Mons, Albert and Packer, Abel L. and Persson, Bengt and {Rocca-Serra}, Philippe and Roos, Marco and {van Schaik}, Rene and Sansone, Susanna-Assunta and Schultes, Erik and Sengstag, Thierry and Slater, Ted and Strawn, George and Swertz, Morris A. and Thompson, Mark and {van der Lei}, Johan and {van Mulligen}, Erik and Velterop, Jan and Waagmeester, Andra and Wittenburg, Peter and Wolstencroft, Katherine and Zhao, Jun and Mons, Barend},
+  year = 2016,
+  month = mar,
+  journal = {Scientific Data},
+  volume = {3},
+  number = {1},
+  pages = {160018},
+  publisher = {Nature Publishing Group},
+  issn = {2052-4463},
+  doi = {10.1038/sdata.2016.18},
+  urldate = {2025-02-14},
+  copyright = {2016 The Author(s)},
+  langid = {english},
+  keywords = {Publication characteristics,Research data}
 }
 
 @article{zhu2001_ratedependent,
