JOSS: elastic deformation paragraph, small notes

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -11,6 +11,21 @@
   urldate = {2024-07-12}
 }
 
+@article{campana2006_green,
+  title = {Practical Green's function approach to the simulation of elastic semi-infinite solids},
+  author = {Campa\~n\'a, Carlos and M\"user, Martin H.},
+  journal = {Phys. Rev. B},
+  volume = {74},
+  issue = {7},
+  pages = {075420},
+  numpages = {15},
+  year = {2006},
+  month = {Aug},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevB.74.075420},
+  urldate = {2025-11-16}
+}
+
 @article{codrignani2023_continuum,
   title = {Toward a Continuum Description of Lubrication in Highly Pressurized Nanometer-Wide Constrictions: {{The}} Importance of Accurate Slip Laws},
   shorttitle = {Toward a Continuum Description of Lubrication in Highly Pressurized Nanometer-Wide Constrictions},
