JOSS: apply comments

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -11,19 +11,18 @@
   urldate = {2024-07-12}
 }
 
-@article{campana2006_green,
-  title = {Practical Green's function approach to the simulation of elastic semi-infinite solids},
-  author = {Campa\~n\'a, Carlos and M\"user, Martin H.},
-  journal = {Phys. Rev. B},
+@article{campana2006_practical,
+  title = {Practical {{Green}}'s Function Approach to the Simulation of Elastic Semi-Infinite Solids},
+  author = {Campa{\~n}{\'a}, Carlos and M{\"u}ser, Martin H.},
+  year = 2006,
+  month = aug,
+  journal = {Physical Review B},
   volume = {74},
-  issue = {7},
+  number = {7},
   pages = {075420},
-  numpages = {15},
-  year = {2006},
-  month = {Aug},
   publisher = {American Physical Society},
   doi = {10.1103/PhysRevB.74.075420},
-  urldate = {2025-11-16}
+  urldate = {2025-09-22}
 }
 
 @article{codrignani2023_continuum,
@@ -146,6 +145,21 @@
   urldate = {2024-06-25},
   langid = {english},
   keywords = {Data management,Database searching,Databases,Ecosystems,Ingestion,Language,Life cycles,Metadata}
+}
+
+@article{jadhao2019_rheological,
+  title = {Rheological Properties of Liquids under Conditions of Elastohydrodynamic Lubrication},
+  author = {Jadhao, Vikram and Robbins, Mark O.},
+  year = 2019,
+  month = may,
+  journal = {Tribology Letters},
+  volume = {67},
+  number = {3},
+  pages = {66},
+  issn = {1573-2711},
+  doi = {10.1007/s11249-019-1178-3},
+  urldate = {2019-12-10},
+  langid = {english}
 }
 
 @article{jewett2021_moltemplate,
