JOSS: elastic deformation paragraph extension, tut 08 small changes

--- a/doc/tutorials/08_elastic_deformation.ipynb
+++ b/doc/tutorials/08_elastic_deformation.ipynb
@@ -414,12 +414,20 @@
    "id": "34",
    "metadata": {},
    "source": [
-    "### Parabolic Slider, Non-Periodic"
+    "Note that we allow negative pressures in this example. For more realistic behaviour, we can use an equation of state that considers cavitation and therefore does not output negative pressures. See the non-periodic example below that uses *Bayada-Chupin* equation of state."
    ]
   },
   {
    "cell_type": "markdown",
    "id": "35",
+   "metadata": {},
+   "source": [
+    "### Parabolic Slider, Non-Periodic"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "36",
    "metadata": {},
    "source": [
     "In this example, we want to illustrate how a parabolic slider deforms.\n",
@@ -432,7 +440,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36",
+   "id": "37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,7 +493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37",
+   "id": "38",
    "metadata": {},
    "source": [
     "Now we initialize the problem"
@@ -494,7 +502,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38",
+   "id": "39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,7 +513,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39",
+   "id": "40",
    "metadata": {},
    "source": [
     "Let's look at the initial geometry:"
@@ -514,7 +522,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40",
+   "id": "41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,7 +532,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41",
+   "id": "42",
    "metadata": {},
    "source": [
     "Think about how there will be pressure building up on the left side of the slider and how the resulting deformation will change the shape.\n",
@@ -535,23 +543,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42",
+   "id": "43",
    "metadata": {},
    "outputs": [],
    "source": [
     "myProblem.run()\n",
     "\n",
     "myProblem.plot_topo(show_defo=True, show_pressure=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "43",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "myProblem.animate()"
    ]
   },
   {
