--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -11,7 +11,7 @@
   urldate = {2024-07-12}
 }
 
-@article{stanley1997_FFT
+@article{stanley1997_FFT,
 	title = {An FFT-Based Method for Rough Surface Contact},
   author = {Stanley, H. M. and Kato, T.},
 	year = 1997,
