DOC: lubrication tutorial

--- a/doc/tutorials/03_eos.ipynb
+++ b/doc/tutorials/03_eos.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "from GaPFlow.models.pressure import eos_pressure\n",
     "\n",
-    "plt.style.use(resources.files(\"GaPFlow.resources\").joinpath(\"gapflow.mplstyle\"))\n",
+    "# plt.style.use(resources.files(\"GaPFlow.resources\").joinpath(\"gapflow.mplstyle\"))\n",
     "\n",
     "\n",
     "def plot_bwr(ax):\n",
