--- a/doc/tutorials/04_viscosity.ipynb
+++ b/doc/tutorials/04_viscosity.ipynb
@@ -63,7 +63,7 @@
     "\n",
     "if __name__ == \"__main__\":\n",
     "\n",
-    "    plt.style.use(resources.files(\"GaPFlow.resources\").joinpath(\"gapflow.mplstyle\"))\n",
+    "    # plt.style.use(resources.files(\"GaPFlow.resources\").joinpath(\"gapflow.mplstyle\"))\n",
     "\n",
     "    fig, ax = plt.subplots(1, 2)\n",
     "    fig.suptitle('Viscosity models (with default parameters)')\n",
