DOC: update tutorials

--- a/doc/tutorials/02_stress_sympy.ipynb
+++ b/doc/tutorials/02_stress_sympy.ipynb
@@ -43,7 +43,7 @@
     "from copy import deepcopy\n",
     "import sympy as sp\n",
     "\n",
-    "import GaPFlow.viz\n",
+    "# import GaPFlow.viz\n",
     "\n",
     "# Define Cartesian coordinates\n",
     "x, y, z = sp.symbols(\"x y z\")\n",
@@ -541,7 +541,7 @@
    "notebook_metadata_filter": "-all"
   },
   "kernelspec": {
-   "display_name": "GaPFlow",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
