--- a/doc/tutorials/06_lubrication.ipynb
+++ b/doc/tutorials/06_lubrication.ipynb
@@ -13,155 +13,13 @@
    "id": "1",
    "metadata": {},
    "source": [
-    "The previous example dealt with the confined fluid close to equilibrium. The flow was induced by small perturbations out of equilibrium to eventually restore the equilibrium state. Now we look at a nonequilibrium case, where the movement of the walls constantly drives the fluid. This situation is commonly found in lubrication. First, let us have a closer look at the structure of the YAML input file."
+    "The previous example dealt with the confined fluid close to equilibrium. The flow was induced by small perturbations out of equilibrium to eventually restore the equilibrium state. Now we look at a nonequilibrium case, where the movement of the walls constantly drives the fluid. This situation is commonly found in lubrication. In this tutorial, we'll look at a journal bearing simulation defined by the following YAML input."
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "2",
-   "metadata": {},
-   "source": [
-    "### YAML\n",
-    "\n",
-    "The `options` section contains some general options mainly on how and where the simulation output is stored:\n",
-    "\n",
-    "```yaml\n",
-    "options:\n",
-    "    silent: False        # If true, all output to stdout and to files is suppressed, the default is False\n",
-    "    output: data/journal # The name of the simulation output directory, will raise an error if already existent\n",
-    "    use_tstamp: False    # Prepend the simulation output directory with a time stamp (useful to avoid errors due to existent folders)\n",
-    "    write_freq: 1000     # Output frequency (both to stdout and NetCDF file)\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3",
-   "metadata": {},
-   "source": [
-    "The `geometry` section defines the lubrication problem. It specifies the type of the height profile and the velocities of the walls. Here we look at a journal bearing geeometry which can be defined by the nondimensional parameters $\\epsilon$ and $\\mathrm{CR}$:\n",
-    "\n",
-    "```yaml\n",
-    "geometry:\n",
-    "    type: journal # 'bearing' type\n",
-    "    CR: 1.e-2     # clearance ratio\n",
-    "    eps: 0.7      # eccentricity\n",
-    "    U: 0.1        # X velocity of the lower wall\n",
-    "    V: 0.         # Y velocity of the lower wall\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4",
-   "metadata": {},
-   "source": [
-    "The `grid` section specifies the numerical discretization of the problem and the boundary conditions. For the journal bearing, it makes sense to use periodic boundary conditions.\n",
-    "\n",
-    "```yaml\n",
-    "geometry:\n",
-    "    Lx: 1.e-3           # Length in X\n",
-    "    Ly: 1.              # Length in Y: here 1D so irrelevant\n",
-    "    Nx: 100             # Number of cells in X\n",
-    "    Ny: 1               # Number of cells in Y\n",
-    "    xE: ['P', 'P', 'P'] # BC in x direction (East) for [density, fluxX, fluxY]; 'P' = periodic (other 'D' = Dirichlet, 'N' = Neumann)\n",
-    "    xW: ['P', 'P', 'P'] # BC in x direction (West) for [density, fluxX, fluxY]; 'P' = periodic (other 'D' = Dirichlet, 'N' = Neumann)\n",
-    "    yS: ['P', 'P', 'P'] # BC in y direction (South) for [density, fluxX, fluxY]; 'P' = periodic (other 'D' = Dirichlet, 'N' = Neumann)\n",
-    "    yN: ['P', 'P', 'P'] # BC in y direction (North) for [density, fluxX, fluxY]; 'P' = periodic (other 'D' = Dirichlet, 'N' = Neumann)\n",
-    "```\n",
-    "Note that 1D simulations like this one should always use periodic BCs in the perpendicular direction (here y).\n",
-    "If we'd want to use Dirichlet BCs, we would als need to specify the values to which the boundary cell is fixed, e.g.\n",
-    "\n",
-    "```yaml\n",
-    "    xE_D: 1.\n",
-    "    xW_D: 1.\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5",
-   "metadata": {},
-   "source": [
-    "The time integration settings are defined in the `numerics` scetion.\n",
-    "\n",
-    "```yaml\n",
-    "numerics:\n",
-    "    CFL: 0.5        # Courant number used for the adaptive time-stepping\n",
-    "    adaptive: True  # Adaptive time stepping\n",
-    "    tol: 1e-8       # Numerical tolerance for convergence to steady state\n",
-    "    dt: 1e-10       # Time step size (for non-adaptive only)\n",
-    "    max_it: 10_000  # Maximum number of time steps\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6",
-   "metadata": {},
-   "source": [
-    "We have already seen the `properties` section in previous notebooks. Next to the shear and bulk viscosity, the remaining parameters depend on the type of equation of state used to model the compressible fluid:\n",
-    "\n",
-    "```yaml\n",
-    "properties:\n",
-    "    shear: 0.0794  # Shear viscosity\n",
-    "    bulk: 0.       # Bulk viscosity\n",
-    "    EOS: DH        # Equation of state (here: Dowson-Higginson)\n",
-    "    P0: 101325.    # Reference pressure (for DH-EoS)\n",
-    "    rho0: 877.7007 # Reference density (for DH-EoS)\n",
-    "    T0: 323.15     # Reference temperature (for DH-EoS)\n",
-    "    C1: 3.5e12     # Parameter 1\n",
-    "    C2: 1.23       # Parameter 2\n",
-    "```\n",
-    "\n",
-    "Note that the `C1` parameter is four order of magnitude larger than values typically found in the literature. This is intended in order to mimic a (nearly) incompressible fluid with an equation of state as shown in the plot below, where the pressure-density relation is nearly vertical around the reference density."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from copy import deepcopy\n",
-    "from GaPFlow.models.pressure import eos_pressure\n",
-    "\n",
-    "props = {'EOS': 'DH'} \n",
-    "props.update(rho0=877.7007, P0=101325., C1=3.5e8, C2=1.23) # default values\n",
-    "props_comp = deepcopy(props)\n",
-    "props.update(C1=3.5e12)\n",
-    "\n",
-    "dens = np.linspace(877.65, 877.75, 300)\n",
-    "\n",
-    "fig, ax = plt.subplots(1)\n",
-    "\n",
-    "p_comp = eos_pressure(dens, props_comp)\n",
-    "p_incomp = eos_pressure(dens, props)\n",
-    "\n",
-    "ax.plot(dens, p_comp,  '-', label='compressible')\n",
-    "ax.plot(dens, p_incomp, '-', label='\"incompressible\"')\n",
-    "\n",
-    "ax.set_yscale('log')\n",
-    "ax.set_xlabel('Density')\n",
-    "ax.set_ylabel('Pressure')\n",
-    "ax.legend();"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8",
-   "metadata": {},
-   "source": [
-    "Now we can use the simulation for the nearly incompressible fluids and compare to an analytic solution for incompressible isoviscous fluids and the journal bearing geometry."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,29 +58,146 @@
     "    T0: 323.15\n",
     "    C1: 3.5e12\n",
     "    C2: 1.23\n",
-    "\"\"\"\n"
+    "\"\"\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "3",
    "metadata": {},
    "outputs": [],
    "source": [
     "from GaPFlow import Problem\n",
-    "journal_problem = Problem.from_string(journal_input)"
+    "journal_problem = Problem.from_string(journal_input)\n",
+    "journal_problem.pre_run()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4",
+   "metadata": {},
+   "source": [
+    "The gap between the shaft and the bearing can be described by a *cosine* function."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "journal_problem.pre_run()\n",
-    "journal_problem.run()"
+    "journal_problem.plot_topo()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6",
+   "metadata": {},
+   "source": [
+    "Before we run the simulation, let us unpack the different sections of the YAML file."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7",
+   "metadata": {},
+   "source": [
+    "### YAML Input\n",
+    "\n",
+    "The `options` section contains some general options mainly on how and where the simulation output is stored:\n",
+    "\n",
+    "```yaml\n",
+    "options:\n",
+    "    silent: False        # If true, all output to stdout and to files is suppressed, the default is False\n",
+    "    output: data/journal # The name of the simulation output directory, will raise an error if already existent\n",
+    "    use_tstamp: False    # Prepend the simulation output directory with a time stamp (useful to avoid errors due to existent folders)\n",
+    "    write_freq: 1000     # Output frequency (both to stdout and NetCDF file)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8",
+   "metadata": {},
+   "source": [
+    "The `geometry` section defines the lubrication problem. It specifies the type of the height profile and the velocities of the walls. Here we look at a journal bearing geometry which can be defined by the nondimensional parameters $\\epsilon$ and $\\mathrm{CR}$:\n",
+    "\n",
+    "```yaml\n",
+    "geometry:\n",
+    "    type: journal # 'bearing' type\n",
+    "    CR: 1.e-2     # clearance ratio\n",
+    "    eps: 0.7      # eccentricity\n",
+    "    U: 0.1        # X velocity of the lower wall\n",
+    "    V: 0.         # Y velocity of the lower wall\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9",
+   "metadata": {},
+   "source": [
+    "The `grid` section specifies the numerical discretization of the problem and the boundary conditions. For the journal bearing, it makes sense to use periodic boundary conditions.\n",
+    "\n",
+    "```yaml\n",
+    "geometry:\n",
+    "    Lx: 1.e-3           # Length in X\n",
+    "    Ly: 1.              # Length in Y: here 1D so irrelevant\n",
+    "    Nx: 100             # Number of cells in X\n",
+    "    Ny: 1               # Number of cells in Y\n",
+    "    xE: ['P', 'P', 'P'] # BC in x direction (East) for [density, fluxX, fluxY]; 'P' = periodic (other 'D' = Dirichlet, 'N' = Neumann)\n",
+    "    xW: ['P', 'P', 'P'] # BC in x direction (West) for [density, fluxX, fluxY]; 'P' = periodic (other 'D' = Dirichlet, 'N' = Neumann)\n",
+    "    yS: ['P', 'P', 'P'] # BC in y direction (South) for [density, fluxX, fluxY]; 'P' = periodic (other 'D' = Dirichlet, 'N' = Neumann)\n",
+    "    yN: ['P', 'P', 'P'] # BC in y direction (North) for [density, fluxX, fluxY]; 'P' = periodic (other 'D' = Dirichlet, 'N' = Neumann)\n",
+    "```\n",
+    "Note that 1D simulations like this one should always use periodic BCs in the perpendicular direction (here y).\n",
+    "If we'd want to use Dirichlet BCs, we would als need to specify the values to which the boundary cell is fixed, e.g.\n",
+    "\n",
+    "```yaml\n",
+    "    xE_D: 1.\n",
+    "    xW_D: 1.\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "10",
+   "metadata": {},
+   "source": [
+    "The time integration settings are defined in the `numerics` scetion.\n",
+    "\n",
+    "```yaml\n",
+    "numerics:\n",
+    "    CFL: 0.5        # Courant number used for the adaptive time-stepping\n",
+    "    adaptive: True  # Adaptive time stepping\n",
+    "    tol: 1e-8       # Numerical tolerance for convergence to steady state\n",
+    "    dt: 1e-10       # Time step size (for non-adaptive only)\n",
+    "    max_it: 10_000  # Maximum number of time steps\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "11",
+   "metadata": {},
+   "source": [
+    "We have already seen the `properties` section in previous notebooks. Next to the shear and bulk viscosity, the remaining parameters depend on the type of equation of state used to model the compressible fluid:\n",
+    "\n",
+    "```yaml\n",
+    "properties:\n",
+    "    shear: 0.0794  # Shear viscosity\n",
+    "    bulk: 0.       # Bulk viscosity\n",
+    "    EOS: DH        # Equation of state (here: Dowson-Higginson)\n",
+    "    P0: 101325.    # Reference pressure (for DH-EoS)\n",
+    "    rho0: 877.7007 # Reference density (for DH-EoS)\n",
+    "    T0: 323.15     # Reference temperature (for DH-EoS)\n",
+    "    C1: 3.5e12     # Parameter 1\n",
+    "    C2: 1.23       # Parameter 2\n",
+    "```\n",
+    "\n",
+    "Note that the `C1` parameter is four order of magnitude larger than values typically found in the literature. This is intended in order to mimic a (nearly) incompressible fluid with an equation of state as shown in the plot below, where the pressure-density relation is nearly vertical around the reference density."
    ]
   },
   {
@@ -232,13 +207,64 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from copy import deepcopy\n",
+    "from GaPFlow.models.pressure import eos_pressure\n",
+    "\n",
+    "props = {'EOS': 'DH'} \n",
+    "props.update(rho0=877.7007, P0=101325., C1=3.5e8, C2=1.23) # default values\n",
+    "props_comp = deepcopy(props)\n",
+    "props.update(C1=3.5e12)\n",
+    "\n",
+    "dens = np.linspace(877.65, 877.75, 300)\n",
+    "\n",
+    "fig, ax = plt.subplots(1)\n",
+    "\n",
+    "p_comp = eos_pressure(dens, props_comp)\n",
+    "p_incomp = eos_pressure(dens, props)\n",
+    "\n",
+    "ax.plot(dens, p_comp,  '-', label='compressible')\n",
+    "ax.plot(dens, p_incomp, '-', label='\"incompressible\"')\n",
+    "\n",
+    "ax.set_yscale('log')\n",
+    "ax.set_xlabel('Density')\n",
+    "ax.set_ylabel('Pressure')\n",
+    "ax.legend();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13",
+   "metadata": {},
+   "source": [
+    "Now we can use the simulation for the nearly incompressible fluids and compare to an analytic solution for incompressible isoviscous fluids and the journal bearing geometry."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "journal_problem.run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "journal_problem.plot_topo(show_defo=False, show_pressure=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "18",
    "metadata": {},
    "outputs": [],
    "source": []
