DOC: separate installation section

--- a/doc/tutorials/06_lubrication.ipynb
+++ b/doc/tutorials/06_lubrication.ipynb
@@ -104,7 +104,7 @@
    "id": "7",
    "metadata": {},
    "source": [
-    "### YAML Input\n",
+    "## YAML Input\n",
     "\n",
     "The `options` section contains some general options mainly on how and where the simulation output is stored:\n",
     "\n",
