--- a/doc/tutorials/08_elastic_deformation.ipynb
+++ b/doc/tutorials/08_elastic_deformation.ipynb
@@ -563,7 +563,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "GaPFlow",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
