DOC: small fixes tut 01 + 02

--- a/doc/tutorials/01_macro_equations.ipynb
+++ b/doc/tutorials/01_macro_equations.ipynb
@@ -14,7 +14,7 @@
    "metadata": {},
    "source": [
     "For a detailed derivation and description of the following overview, see\n",
-    "[Holey, H. et al., Tribology Letters 70 (2022)](<https://doi.org/10.1007/s11249-022-01576-5>)"
+    "[Holey, H. et al., Tribology Letters 70 (2022)](<https://doi.org/10.1007/s11249-022-01576-5>)."
    ]
   },
   {
@@ -337,7 +337,7 @@
    "id": "21",
    "metadata": {},
    "source": [
-    "meaning that this expression is a constant source term at a given $(x,y,t)$. We can evaluate and simplify the above equation to:\n",
+    "meaning that this expression has to be a constant source term at a given $(x,y,t)$. We can evaluate and simplify the above equation to:\n",
     "\n",
     "$$\n",
     "\\frac{\\partial}{\\partial z}\n",
