--- a/doc/tutorials/02_stress_sympy.ipynb
+++ b/doc/tutorials/02_stress_sympy.ipynb
@@ -65,8 +65,10 @@
    "source": [
     "$U_\\mathrm{bot}$, $U_\\mathrm{top}$, $V_\\mathrm{bot}$, $V_\\mathrm{top}$ are the velocity of the outermost fluid\n",
     "layers in contact with the the bottom and top wall, and in $x$ and $y$ direction, respectively.\n",
-    "In the case of the no slip boundary condition, these velocities are identical\n",
-    "with those of the wall. For the no slip boundary conditions, we have to account for the slip length $L_\\mathrm{slip}$\n",
+    "In the case of the *no slip* boundary condition, these velocities are identical\n",
+    "with those of the wall.\n",
+    "\n",
+    "If *slip* is considered, we have to account for the slip length $L_\\mathrm{slip}$:\n",
     "\n",
     "$U_\\mathrm{bot} = U_\\mathrm{bot,wall} + L_\\mathrm{slip, bot}\\left(\\frac{\\partial u}{\\partial z}\\right)_{z=0}$,\n",
     "\n",
@@ -541,7 +543,7 @@
    "notebook_metadata_filter": "-all"
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "GaPFlow",
    "language": "python",
    "name": "python3"
   },
