DOC: tut 03 units

--- a/doc/tutorials/03_eos.ipynb
+++ b/doc/tutorials/03_eos.ipynb
@@ -32,8 +32,8 @@
     "        ax.plot(dens, p, label=rf\"$T=${temp}\")\n",
     "\n",
     "    ax.legend()\n",
-    "    ax.set_xlabel('Density')\n",
-    "    ax.set_ylabel('Pressure')\n",
+    "    ax.set_xlabel(r'Density ($\\mathrm{kg\\,m^{-3}}$)')\n",
+    "    ax.set_ylabel(r'Pressure ($\\mathrm{Pa}$)')\n",
     "    ax.set_title('BWR (LJ)')\n",
     "\n",
     "\n",
@@ -45,8 +45,8 @@
     "\n",
     "    ax.plot(dens, p, label='Dowson-Higginson')\n",
     "\n",
-    "    ax.set_xlabel('Density')\n",
-    "    ax.set_ylabel('Pressure')\n",
+    "    ax.set_xlabel(r'Density ($\\mathrm{kg\\,m^{-3}}$)')\n",
+    "    ax.set_ylabel(r'Pressure ($\\mathrm{Pa}$)')\n",
     "    ax.set_title('DH')\n",
     "\n",
     "\n",
@@ -58,8 +58,8 @@
     "\n",
     "    ax.plot(dens, p, label='Murnaghan-Tait')\n",
     "\n",
-    "    ax.set_xlabel('Density')\n",
-    "    ax.set_ylabel('Pressure')\n",
+    "    ax.set_xlabel(r'Density ($\\mathrm{kg\\,m^{-3}}$)')\n",
+    "    ax.set_ylabel(r'Pressure ($\\mathrm{Pa}$)')\n",
     "    ax.set_title('MT')\n",
     "\n",
     "\n",
@@ -72,8 +72,8 @@
     "        p = eos_pressure(dens, props)\n",
     "        ax.plot(dens, p, label=rf'$\\alpha=${alpha:.1f}')\n",
     "\n",
-    "    ax.set_xlabel('Density')\n",
-    "    ax.set_ylabel('Pressure')\n",
+    "    ax.set_xlabel(r'Density ($\\mathrm{kg\\,m^{-3}}$)')\n",
+    "    ax.set_ylabel(r'Pressure ($\\mathrm{Pa}$)')\n",
     "    ax.set_title('Power law')\n",
     "    ax.legend()\n",
     "\n",
@@ -87,8 +87,8 @@
     "        p = eos_pressure(dens, props)\n",
     "        ax.plot(dens, p, label=rf\"$T=${temp:.0f} K\")\n",
     "\n",
-    "    ax.set_xlabel('Density')\n",
-    "    ax.set_ylabel('Pressure')\n",
+    "    ax.set_xlabel(r'Density ($\\mathrm{kg\\,m^{-3}}$)')\n",
+    "    ax.set_ylabel(r'Pressure ($\\mathrm{Pa}$)')\n",
     "    ax.set_title('van der Waals')\n",
     "    ax.legend()\n",
     "\n",
@@ -135,7 +135,7 @@
    "notebook_metadata_filter": "-all"
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "GaPFlow",
    "language": "python",
    "name": "python3"
   },
