DOC: tut 04 units

--- a/doc/tutorials/04_viscosity.ipynb
+++ b/doc/tutorials/04_viscosity.ipynb
@@ -84,8 +84,8 @@
     "\n",
     "        ax[0].loglog(shear_rate, viscosity, label=name)\n",
     "\n",
-    "    ax[0].set_xlabel('Shear rate')\n",
-    "    ax[0].set_ylabel('Viscosity')\n",
+    "    ax[0].set_xlabel(r'Shear rate ($\\mathrm{s^{-1}}$)')\n",
+    "    ax[0].set_ylabel(r'Viscosity ($\\mathrm{Pa\\,s}$)')\n",
     "    ax[0].legend()\n",
     "\n",
     "    # Piezoviscosity\n",
@@ -103,8 +103,8 @@
     "\n",
     "        ax[1].loglog(pressure, viscosity, label=name)\n",
     "\n",
-    "    ax[1].set_xlabel('Pressure')\n",
-    "    ax[1].set_ylabel('Viscosity')\n",
+    "    ax[1].set_xlabel(r'Pressure ($\\mathrm{Pa}$)')\n",
+    "    ax[1].set_ylabel(r'Viscosity ($\\mathrm{Pa\\,s}$)')\n",
     "    ax[1].legend()\n",
     "\n",
     "    plt.show()"
@@ -118,7 +118,7 @@
    "notebook_metadata_filter": "-all"
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "GaPFlow",
    "language": "python",
    "name": "python3"
   },
