DOC: small changes to tutorials, increase timeout

--- a/doc/tutorials/07_GP.ipynb
+++ b/doc/tutorials/07_GP.ipynb
@@ -48,7 +48,7 @@
     "    adaptive: 1\n",
     "    tol: 1e-9\n",
     "    dt: 1e-10\n",
-    "    max_it: 1_000\n",
+    "    max_it: 2_500\n",
     "properties:\n",
     "    shear: 0.0794\n",
     "    bulk: 0.\n",
@@ -146,7 +146,7 @@
     "    - active_dims_y          : [0, 2, 3]\n",
     "```\n",
     "\n",
-    "The first to entries `press_gp` and `shear_gp` indicate that both GP models are active."
+    "The first two entries `press_gp` and `shear_gp` indicate that both GP models are active."
    ]
   },
   {
@@ -167,7 +167,7 @@
    "id": "6",
    "metadata": {},
    "source": [
-    "Since we are looking at a one-dimensional problem, the wall shear stress in $y$ direction is irrelevant and therfore not replaced with a surrogate. \n",
+    "Since we are looking at a one-dimensional problem, the wall shear stress in $y$ direction is irrelevant and therefore not replaced with a surrogate. \n",
     "The gap-averaged viscous stress components (`bulk_stress`) are never replaced by a GP model, and are set to zero in this example (see remark above)."
    ]
   },
@@ -186,7 +186,7 @@
     "  - init_seed                : 0\n",
     "```\n",
     "\n",
-    "Bot models read from and write to the same database, which is initially empty:"
+    "Both models read from and write to the same database, which is initially empty:"
    ]
   },
   {
@@ -330,7 +330,7 @@
     "The `pre_run()` initialization also runs a first hyperparameter fit of the GP models. \n",
     "The output data used in the pressure and shear stress models is fixed, but we can change which features will be used via the `active_dims` settings.\n",
     "The defaults are density and gap height (`active_dims: [0, 3]`) for pressure, and density, gap height, and flux for shear stress (e.g. `active_dims_x: [0, 1, 3]`).\n",
-    "The modes are now read to make a first prediction:"
+    "The models are now ready to make a first prediction:"
    ]
   },
   {
@@ -387,7 +387,7 @@
    "outputs": [],
    "source": [
     "# This is usually what happens within the run() method but we can also trigger it manually\n",
-    "for _ in range(10):\n",
+    "for _ in range(50):\n",
     "    myProblem.update()"
    ]
   },
@@ -440,13 +440,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "27",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "myProblem.plot()"
+    "The active learning simulation continued to extend the database. Let's check its growth as a function of the simulation time step:"
    ]
   },
   {
@@ -457,7 +455,10 @@
    "outputs": [],
    "source": [
     "plt.plot(myProblem.pressure.history['step'],\n",
-    "         myProblem.pressure.history['database_size'])"
+    "         myProblem.pressure.history['database_size'])\n",
+    "\n",
+    "plt.xlabel('Step')\n",
+    "plt.ylabel('Database size');"
    ]
   },
   {
@@ -467,25 +468,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "myProblem.max_it = 10_000\n",
-    "myProblem.run()"
+    "fig, ax = plt.subplots(2, 3, figsize=(2*_sx, 2*_sy))\n",
+    "myProblem.plot(ax=ax)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "30",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "31",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "After 2500 steps, the simulation results looks close to what we expect for the journal bearing case, but has not yet converged. Feel free to run it for longer (by modifying the `max_it` parameter)."
+   ]
   }
  ],
  "metadata": {
