DOC: combine tutorial 3 & 4

--- a/doc/tutorials/05_lubrication.ipynb
+++ b/doc/tutorials/05_lubrication.ipynb
@@ -258,7 +258,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "journal_problem.plot_topo(show_defo=False, show_pressure=True)"
+    "sx, sy = plt.rcParams['figure.figsize']\n",
+    "fig, ax = plt.subplots(2, 3, figsize=(2*sx, 2*sy))\n",
+    "journal_problem.plot(ax=ax)"
    ]
   },
   {
