WIP: integrated dynamic FEM mode and periodicity

--- a/GaPFlow/fem/test.ipynb
+++ b/GaPFlow/fem/test.ipynb
@@ -57,6 +57,69 @@
     "problem.run()\n",
     "problem.plot()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from GaPFlow import Problem\n",
+    "\n",
+    "sim = \"\"\"\n",
+    "options:\n",
+    "    output: data/journal\n",
+    "    write_freq: 1\n",
+    "    silent: False\n",
+    "grid:\n",
+    "    dx: 1.e-5\n",
+    "    dy: 1.\n",
+    "    Nx: 100\n",
+    "    Ny: 1\n",
+    "    xE: ['P', 'P', 'P']\n",
+    "    xW: ['P', 'P', 'P']\n",
+    "    yS: ['P', 'P', 'P']\n",
+    "    yN: ['P', 'P', 'P']\n",
+    "geometry:\n",
+    "    type: journal\n",
+    "    CR: 1.e-2\n",
+    "    eps: 0.7\n",
+    "    U: 0.1\n",
+    "    V: 0.\n",
+    "numerics:\n",
+    "    solver: fem\n",
+    "    CFL: 0.25\n",
+    "    adaptive: 1\n",
+    "    tol: 1e-8\n",
+    "    dt: 1e-02\n",
+    "    max_it: 5\n",
+    "properties:\n",
+    "    shear: 0.0794\n",
+    "    bulk: 0.\n",
+    "    EOS: DH\n",
+    "    P0: 101325.\n",
+    "    rho0: 877.7007\n",
+    "    T0: 323.15\n",
+    "    C1: 3.5e10\n",
+    "    C2: 1.23\n",
+    "fem_solver:\n",
+    "    type: newton_alpha\n",
+    "    dynamic: True\n",
+    "    max_iter: 10\n",
+    "    alpha: 1.0\n",
+    "    R_norm_tol: 1e-04\n",
+    "    equations:\n",
+    "        term_list: ['R11', 'R12', 'R21', 'R24', 'R1T', 'R2T']\n",
+    "\"\"\"\n",
+    "\n",
+    "problem = Problem.from_string(sim)\n",
+    "#problem.solver.pre_run()\n",
+    "#problem.solver.print_system()\n",
+    "#problem.plot_topo()\n",
+    "problem.run()\n",
+    "problem.plot()"
+   ]
   }
  ],
  "metadata": {
