DOC: fixing notebook outline

--- a/doc/tutorials/broken.ipynb
+++ b/doc/tutorials/broken.ipynb
@@ -37,7 +37,7 @@
    "id": "3",
    "metadata": {},
    "source": [
-    "<img src=\"./data/FEM_ST_NP.png\" alt=\"Beschreibung\" width=\"300\">"
+    "<img src=\"./figures/FEM_ST_NP.png\" alt=\"Beschreibung\" width=\"300\">"
    ]
   },
   {
@@ -312,8 +312,8 @@
    "id": "18",
    "metadata": {},
    "source": [
-    "And what about the tangential matrix?  We need to know:\n",
     "\n",
+    "And what about the tangential matrix?  We need to know:\n",
     "\n",
     "$$\n",
     "\\frac{\\partial}{\\partial a_k}\n",
@@ -346,15 +346,7 @@
     "$$\n",
     "\\frac{\\partial \\rho_N}{\\partial x}\n",
     " = \\frac{a_{\\text{right}} - a_{\\text{left}}}{\\Delta x}\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "19",
-   "metadata": {},
-   "source": [
-    "Here\n",
+    "$$\n",
     "\n",
     "$$\n",
     "\\frac{\\partial}{\\partial a_k}\n",
@@ -411,7 +403,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20",
+   "id": "19",
    "metadata": {},
    "source": [
     "For the diagonal entry, $a_i = a_{\\text{right}}$ and therefore\n",
@@ -465,7 +457,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21",
+   "id": "20",
    "metadata": {},
    "source": [
     "### Residual as second-order spatial derivative of unknowns"
@@ -473,7 +465,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22",
+   "id": "21",
    "metadata": {},
    "source": [
     "Required for the temperature diffusion term:\n",
@@ -534,10 +526,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23",
+   "id": "22",
    "metadata": {},
    "source": [
-    "<hr>\n",
+    "---\n",
     "What about the tangential matrix?\n",
     "\n",
     "$$\n",
@@ -574,7 +566,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24",
+   "id": "23",
    "metadata": {},
    "source": [
     "### Dynamic Solution"
@@ -582,7 +574,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25",
+   "id": "24",
    "metadata": {},
    "source": [
     "Currently solving for steady state:\n",
