DOC: update docstrings (Problem)

--- a/doc/tutorials/04_confined_fluids.ipynb
+++ b/doc/tutorials/04_confined_fluids.ipynb
@@ -365,7 +365,7 @@
    "outputs": [],
    "source": [
     "myProblem = Problem.from_string(sim)\n",
-    "myProblem.pre_run()\n",
+    "myProblem._pre_run()\n",
     "\n",
     "h = myProblem.geo['hmin']\n",
     "kin_visc = myProblem.prop['shear'] / myProblem.prop['rho0']\n",
@@ -418,7 +418,7 @@
    "outputs": [],
    "source": [
     "myProblem = Problem.from_string(sim)\n",
-    "myProblem.pre_run()\n",
+    "myProblem._pre_run()\n",
     "\n",
     "h = myProblem.geo['hmin']\n",
     "nu = myProblem.prop['shear'] / myProblem.prop['rho0']\n",
