--- a/doc/tutorials/06_GP.ipynb
+++ b/doc/tutorials/06_GP.ipynb
@@ -216,7 +216,7 @@
     "The bounds for the LHC sampling are determined autmatically from the initial conditions, but we can modify the bounds for the density\n",
     "individually wiht the `init_width` argument, which gives the half width of the density interval relative to the initial condition (the default is $\\pm1\\%$). \n",
     "Here, it is quite small due to the nearly incompressible fluid. Before we can run a simulation, we have to initialize the database.\n",
-    "This is done in the `pre_run()` method:"
+    "Usually, this is done automatically when we call :meth:`GaPFlow.problem.Problem.run()`. Here, since we want to run the simulation 'manually', we have to call :meth:`GaPFlow.problem.Problem.`_pre_run()` first:"
    ]
   },
   {
@@ -226,7 +226,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "myProblem.pre_run()"
+    "myProblem._pre_run()"
    ]
   },
   {
