--- a/doc/tutorials/05_lubrication.ipynb
+++ b/doc/tutorials/05_lubrication.ipynb
@@ -69,8 +69,7 @@
    "outputs": [],
    "source": [
     "from GaPFlow import Problem\n",
-    "journal_problem = Problem.from_string(journal_input)\n",
-    "journal_problem.pre_run()"
+    "journal_problem = Problem.from_string(journal_input)"
    ]
   },
   {
